<resources>
    <string name="app_name">Sunshine App</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_location">Location</string>
    <string name="title_activity_detail">Weather Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_title_daylight_saving">Enable daylight saving</string>
    <string name="pref_description_daylight_saving">Enable or disable the daylight saving according to your city</string>

    <string name="pref_title_country_zip">Country ZIP code</string>
    <string name="pref_default_country_zip">94043</string>

    <string name="pref_title_temperature_unit">Temperature Unit</string>

    <string name="pref_location_key">location</string>
    <string name="pref_temperature_key">unit</string>

    <string-array name="pref_example_list_titles">
        <item>Metric (C)</item>
        <item>Imperial (F)</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string name="pref_default_temp_unit">metric</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_metric">metric</string>
    <string name="pref_units_imperial">imperial</string>

</resources>
